# watasoge

./: .gitignore  .gitmodules  CLAUDE.md  README.md  STM32G4_CONFIG.md
.claude/skills/deploy/: SKILL.md
.claude/skills/ucbuild/: SKILL.md
.claude/skills/ucconfig/: SKILL.md
.claude/skills/ucflash/: SKILL.md
firmware/doc/: wavetables_for_pi_pico.md
firmware/rp2040/: CLAUDE.md
firmware/stm32g431kb/: CLAUDE.md  CMakeLists.txt  CMakePresets.json  Drivers  STM32G431KBTX_FLASH.ld
firmware/stm32g431kb/Core/Inc/: audio_config.h  delay_line.h  input.h  karplus.h  main.h  output.h  player.h  player_config.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  svf.h  synthesis.h  watasoge_module.h  wavetables_integrated.h
firmware/stm32g431kb/Core/Src/: input.c  karplus.c  main.c  output.c  player.c  player_config.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  synthesis.c  syscalls.c  sysmem.c  system_stm32g4xx.c  watasoge_module.c
firmware/stm32g431kb/cmake/: gcc-arm-none-eabi.cmake
firmware/stm32g431kb/tests/: Makefile  test_adsr.c  test_watasoge_module.c
tools/: play_scale.sh
